<resources>
    <string name="app_name">MyFirstCalculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_percent">%</string>
    <string name="key_clear">C</string>
    <string name="key_division">/</string>
    <string name="key_multiplication">X</string>
    <string name="key_backspace"><![CDATA[<]]></string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_equals">=</string>
    <string name="number_field_hint">Ввод значений</string>
    <string name="result_field_hint">Результат</string>
    <string name="setup_text">Choose your theme</string>
    <string name="button_light_theme">Light</string>
    <string name="button_dark_theme">Dark</string>
    <string name="button_back_to_calculator">Back to calculator</string>
    <string name="button_setup">Settings</string>
</resources>