<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toStartOf="@id/key_division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_division"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toStartOf="@id/key_multiplication"
        app:layout_constraintStart_toEndOf="@id/key_clear"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_multiplication"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toStartOf="@id/key_backspace"
        app:layout_constraintStart_toEndOf="@id/key_division"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_backspace"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_multiplication"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equals"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/key_equals"
        style="@style/ButtonsStyle.Equals"
        app:layout_constraintBottom_toBottomOf="@id/key_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_plus" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintStart_toEndOf="@+id/key_1"
        app:layout_constraintTop_toBottomOf="@id/key_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@+id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@+id/key_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@+id/key_6"
        app:layout_constraintStart_toEndOf="@+id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_equals"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_percent"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        style="@style/ButtonsStyle"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toEndOf="@id/key_percent"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        app:layout_constraintStart_toStartOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

</androidx.constraintlayout.widget.ConstraintLayout>