<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <TextView
        android:id="@+id/setup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_text"
        tools:ignore="MissingConstraints"
        android:textSize="@dimen/text_size_vert"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_light_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_light_theme"
        style="@style/ButtonsStyle"
        app:layout_constraintTop_toBottomOf="@id/setup_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dark_theme"
        style="@style/ButtonsStyle.Operator"
        app:layout_constraintTop_toBottomOf="@id/button_light_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_calculator"
        android:layout_marginTop="@dimen/button_back_margin"
        style="@style/ButtonsStyle.Equals"
        app:layout_constraintTop_toBottomOf="@id/button_dark_theme"/>


</androidx.constraintlayout.widget.ConstraintLayout>